# Fashion-Trend-Recommendation-System

./: README.md  pyproject.toml
fashion_trend/: .envexample  app.py  test.py
fashion_trend/data/Trend Analysis/: output.csv
fashion_trend/data/Trend Analysis/myntra/: myntra_raw_data.csv  myntra_trend.csv
fashion_trend/data/Trend Analysis/pinterest/: pintrest_trend.csv
fashion_trend/data/app_data/vector_indices/: vector_db.pkl
fashion_trend/notebooks/: dev_notebook_1.ipynb  dev_notebook_2.ipynb  dev_notebook_3.ipynb  dev_notebook_4.ipynb  dev_notebook_5.ipynb  dev_notebook_6.ipynb
fashion_trend/utils/: clip_model.py  pintrest_scraper.py  prompt.py  vector_store.py
