[tool.poetry]
name = "fashion-trend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytrends = "^4.9.2"
google-generativeai = "^0.7.0"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"
taipy = "^3.1.1"
torch = "^2.3.1"
transformers = "^4.41.2"
torchvision = "^0.18.1"
timm = "^1.0.7"
einops = "^0.8.0"
streamlit = "^1.36.0"
streamlit-lottie = "^0.0.5"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
openai = "^1.35.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
